[project]
name="jigsawwm"
version="3.0.0"
authors=[
  { name="Klesh Wong", email="klesh@qq.com" },
]
description = "JigsawWM is a free and open-source project that aims to increase your productivity by offering a set of automation facilities, including the jmk module as an AHK alternative, a Tiling Window Manager to free you from managing windows manually and the Daemon to support any customization you may have in mind."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: BSD",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Documentation" = "https://jigsawwm.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/klesh/JigsawWM"
"Issue Tracker" = "https://github.com/klesh/JigsawWM/issues"