[metadata]
name = JigsawWM
url = https://github.com/klesh/JigsawWM
project_urls =
    Documentation = https://jigsawwm.readthedocs.io/en/latest/
    Source Code = https://github.com/klesh/JigsawWM
    Issue Tracker = https://github.com/klesh/JigsawWM/issues
license = Apache 2.0
author = Klesh Wong
author_email = klesh@qq.com
description = Jigsaw is the missing Dynamic Tiling Window Manager for MS Windows
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = 
    jigsawwm 
    jigsawwm.w32
    jigsawwm.tiler
include_package_data = true
python_requires = >= 3.8
install_requires =
    comtypes
    pystray

